# scanlib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml  wheels.yml
docs/: api.rst  cli.rst  conf.py  guide.rst  index.rst  quickstart.rst
examples/: basic_scan.py  color_modes.py  list_scanners.py  multipage.py  page_preview.py  resolutions.py  scan_options.py
src/: _scanlib_accel.c
src/accel/: _scanlib_accel.c  _scanlib_accel.cpp
src/scanlib/: __init__.py  __main__.py  _jpeg.py  _mdns.py  _pdf.py  _types.py
src/scanlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scanlib/backends/: _dispatch.py  _escl.py  _macos.py  _sane.py  _twain.py  _util.py  _wia.py
tests/: test_hardware.py  test_jpeg.py  test_mdns.py  test_pdf.py  test_resolve.py  test_types.py
tests/test_backends/: test_bmp.py  test_dispatch.py  test_escl.py  test_macos.py  test_sane.py  test_twain.py  test_util.py  test_wia.py
