[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scanlib"
version = "0.1.0"
description = "A multiplatform document scanning library for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Angelo Mottola"}]
requires-python = ">=3.9"
dependencies = [
    "comtypes>=1.4; sys_platform == 'win32'",
    "pyobjc-framework-ImageCaptureCore; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "pre-commit"]
docs = ["sphinx", "furo", "sphinx-autodoc-typehints"]

[tool.pytest.ini_options]
markers = ["hardware: tests requiring a physical scanner"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
test-requires = ["pytest", "pytest-timeout"]
test-command = "pytest {project}/tests --ignore={project}/tests/test_hardware.py -v"
enable = ["cpython-freethreading"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["universal2"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
