[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scanlib"
version = "1.0.0"
description = "A multiplatform document scanning library for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Angelo Mottola", email = "a.mottola@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "comtypes>=1.4; sys_platform == 'win32'",
    "pyobjc-framework-ImageCaptureCore; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "pre-commit"]
docs = ["sphinx", "furo", "sphinx-autodoc-typehints"]

[tool.pytest.ini_options]
markers = ["hardware: tests requiring a physical scanner"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.cibuildwheel]
build = "cp39-* cp314t-*"
skip = "*-musllinux_*"
test-requires = ["pytest", "pytest-timeout"]
test-command = "pytest {project}/tests --ignore={project}/tests/test_hardware.py -v"
enable = ["cpython-freethreading"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-build = [
    "yum install -y libjpeg-turbo-devel 2>/dev/null || apk add libjpeg-turbo-dev 2>/dev/null || true",
]
before-test = [
    "yum install -y libjpeg-turbo-devel 2>/dev/null || apk add libjpeg-turbo-dev 2>/dev/null || true",
]

[tool.cibuildwheel.macos]
archs = ["universal2"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
