[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scanlib"
version = "1.2.0"
description = "A multiplatform document scanning library for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Angelo Mottola", email = "a.mottola@gmail.com"}]
keywords = ["scanner", "scanning", "sane", "wia", "escl", "airscan", "twain", "pdf", "document"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "comtypes>=1.4; sys_platform == 'win32'",
    "pyobjc-framework-ImageCaptureCore; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/amottola/scanlib"
Documentation = "https://python-scanlib.readthedocs.io/"
Repository = "https://github.com/amottola/scanlib"
Changelog = "https://github.com/amottola/scanlib/blob/main/CHANGELOG.md"
Issues = "https://github.com/amottola/scanlib/issues"

[project.scripts]
scanlib = "scanlib.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "pre-commit"]
docs = ["sphinx", "furo", "sphinx-autodoc-typehints"]

[tool.pytest.ini_options]
markers = ["hardware: tests requiring a physical scanner"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.cibuildwheel]
build = "cp39-* cp314t-*"
skip = "*-musllinux_*"
test-requires = ["pytest", "pytest-timeout"]
test-command = "pytest {project}/tests --ignore={project}/tests/test_hardware.py -v"
enable = ["cpython-freethreading"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-build = [
    "yum install -y libjpeg-turbo-devel 2>/dev/null || apk add libjpeg-turbo-dev 2>/dev/null || true",
]
before-test = [
    "yum install -y libjpeg-turbo-devel 2>/dev/null || apk add libjpeg-turbo-dev 2>/dev/null || true",
]

[tool.cibuildwheel.macos]
archs = ["universal2"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
